# ierezell.github.io

./: .gitignore  Cargo.toml  README.md  TODO.md  Trunk.toml  index.html
.cargo/: config.toml
.github/workflows/: rust.yml
docs/: index.html  main.css  msg-75e9e0d205afcf63.js  msg-d2ca30101e27b7e3.js  web-096ab58452d04e2b26dabc21d2fcb15e146e98737e15ae2ca702536c10e11625b815aa96d2cbfd6be2c18659ff76a318.js  web-096ab58452d04e2b26dabc21d2fcb15e146e98737e15ae2ca702536c10e11625b815aa96d2cbfd6be2c18659ff76a318_bg.wasm  web-3ecceab63ee39a85.js  web-3ecceab63ee39a85_bg.wasm  web-40522a0a837216be7a80799a2ca9ff4ff00baeab0e69b8410af0c14d78ab842215f10d629b12333594d1cb7166fe1968.js  web-40522a0a837216be7a80799a2ca9ff4ff00baeab0e69b8410af0c14d78ab842215f10d629b12333594d1cb7166fe1968_bg.wasm  web-40fd5b9ce8ac6e3f.js  web-40fd5b9ce8ac6e3f_bg.wasm  web-4bfee5aed74067a0443015dc02b161c3e528cb47011b322ef465bf8124624b7197c44399fd035bb62cf8eaf747ef7dda.js  web-4bfee5aed74067a0443015dc02b161c3e528cb47011b322ef465bf8124624b7197c44399fd035bb62cf8eaf747ef7dda_bg.wasm  web-81ec3688b43c681f.js  web-81ec3688b43c681f_bg.wasm  web-a70c2beab687943b.js  web-a70c2beab687943b_bg.wasm  web-b285e039aba1d1debdb9fef2376d3051d4323413e10c50de66748aa1eca5ee6a074ab63735ef4346014d3ec87903b59d.js  web-b285e039aba1d1debdb9fef2376d3051d4323413e10c50de66748aa1eca5ee6a074ab63735ef4346014d3ec87903b59d_bg.wasm  web-ba6af6f4c25d76dc.js  web-ba6af6f4c25d76dc_bg.wasm  web-cddb15a4307d7e34.js  web-cddb15a4307d7e34_bg.wasm
output/: dates.html  msg_plot.html  reaction_plot.html
posts/: godot.md  nvim.md  website.md
src/: cli.rs  lib.rs  main.rs
src/parsers/: base.rs  facebook.rs  file.rs  mod.rs  whatsapp.rs
src/plots/: cli.rs  facebook.rs  mod.rs  utils.rs  web.rs
src/plots/cli/: facebook.rs
src/plots/web/: facebook.rs
src/web/: app.rs  facebook.rs  home.rs  mod.rs  whatsapp.rs
src/web/blog/: blog.rs  markdown.rs  mod.rs
src/web/parsers/: facebook.rs  mod.rs  whatsapp.rs
src/web/plots/: facebook.rs
tests/assets/: test_message_numbers.json  test_message_numbers_2.json
