[package]
name = "msg"
version = "0.1.0"
edition = "2021"
default_run = "web"

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.12", features = ["derive"] }
js-sys = "0.3.66"
leptos = { version = "0.5.4", features = ["csr", "nightly", "template_macro"] }
leptos_router = { version = "0.5.4", features = ["csr", "nightly"] }
plotly = { version = "0.8.4", features = ["plotly_image", "wasm"] }
regex = { version = "1.10.2", features = ["pattern"] }
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
stylers = { git = "https://github.com/abishekatp/stylers" }
wasm-bindgen-futures = "0.4.39"
web-sys = { version = "0.3.66", features = [
    "File",
    "FileList",
    "FileReader",
    "HtmlInputElement",
] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
ratatui = "0.24.0"
crossterm = "0.27.0"

[build-dependencies]
stylers = { git = "https://github.com/abishekatp/stylers" }

[lib]
name = "msg"
path = "src/lib.rs"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1

[package.metadata.leptos]
lib-profile-release = "wasm-release"

[[bin]]
name = 'cli'
test = false
bench = false
target = 'cfg(not(target_family = "wasm")))'

[[bin]]
name = 'server'
path = 'src/bin/server.rs'
test = false
bench = false
target = 'cfg(target_family = "unix"))'

[[bin]]
name = 'web'
path = 'src/bin/web.rs'
test = false
bench = false

[[bin]]
name = 'test'
path = 'src/bin/test.rs'
test = false
bench = false
