[package]
name = "msg"
version = "0.1.0"
edition = "2021"
default_run = "web"

[dependencies]
chrono = {version="0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
js-sys = "0.3.69"
leptos = { version="0.6.11", features = ["csr", "nightly"] }
leptos_i18n = {version = "0.3.3", features = ["csr"] }
leptos_router = { version = "0.6.11", features = ["csr", "nightly"] }
plotly = { version = "0.8.4", features = ["plotly_image", "wasm"] }
regex = { version = "1.10.4" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
time = "0.3.36"

stylers = {git = "https://github.com/abishekatp/stylers"}
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = [
    "File",
    "FileList",
    "FileReader",
    "HtmlInputElement",
] }
pulldown-cmark = "0.11.0"
reqwest = {version="0.12.4", features = ["json"] }


[target.'cfg(not(target_family = "wasm"))'.dependencies]
ratatui = "0.26.3"
crossterm = "0.27.0"

[build-dependencies]
stylers = {git = "https://github.com/abishekatp/stylers"}

[lib]
name = "msg"
path = "src/lib.rs"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1

[package.metadata.leptos]
lib-profile-release = "wasm-release"

[package.metadata.leptonic]
# REQUIRED: Leptonic's build-script will copy the Leptonic themes to this directory.
style-dir = "style"

# REQUIRED: Leptonic's build-script will copy static JS dependencies to this directory.
js-dir = "public/js"


[[bin]]
name = 'cli'
test = false
bench = false
target = 'cfg(not(target_family = "wasm")))'

[[bin]]
name = 'server'
path = 'src/bin/server.rs'
test = false
bench = false
target = 'cfg(target_family = "unix"))'

[[bin]]
name = 'web'
path = 'src/bin/web.rs'
test = false
bench = false

[[bin]]
name = 'test'
path = 'src/bin/test.rs'
test = false
bench = false
